# HYLin89-SP_mynotebook-by-HY-Lin

./: .env.example  .gitignore  README.md  main.py  model.py  pyproject.toml  requirements.txt  server.py
resources/: accounts.py  articles.py  bookmark.py  messages.py  tknmanage.py
util/: auth.py  mail.py  storage.py  tags.py
