[project]
name = "proj-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "flask-mail>=0.10.0",
    "flask-restful>=0.3.10",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "simple-websocket>=1.1.0",
    "supabase>=2.28.0",
    "werkzeug>=3.1.6",
]

[dependency-groups]
dev = [
    "flasgger>=0.9.7.1",
    "python-dotenv>=1.2.1",
]
